tests/neg/singleQuoteStrings.check
-- Error: tests/neg/singleQuoteStrings.scala:5:10 ----------------------------------------------------------------------
5 |  val a = '' // error
  |          ^
  |          empty character literal (use '\'' for single quote)
-- Error: tests/neg/singleQuoteStrings.scala:8:4 -----------------------------------------------------------------------
8 |    '' // error
  |    ^
  |    empty character literal (use '\'' for single quote)
-- Error: tests/neg/singleQuoteStrings.scala:7:9 -----------------------------------------------------------------------
7 |    world! // error
  |         ^
  |         end of statement expected but identifier found
-- Error: tests/neg/singleQuoteStrings.scala:10:11 ---------------------------------------------------------------------
10 |  val b = s'' // error
   |           ^
   |           empty character literal (use '\'' for single quote)
-- Error: tests/neg/singleQuoteStrings.scala:12:4 ----------------------------------------------------------------------
12 |    ''  // error
   |    ^
   |    empty character literal (use '\'' for single quote)
